[project]
name = "nyc-taxi-benchmark"
version = "0.1.0"
description = "NYC Yellow Taxi 2025 - DB Performance Comparison"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=15.0",
    "psycopg2-binary>=2.9",
    "clickhouse-driver>=0.2",
    "requests>=2.31",
]

[dependency-groups]
dev = []
